Deployment/objects/Toy__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hasbro</fullName>
                </value>
                <value>
                    <fullName>Playmobil</fullName>
                </value>
                <value>
                    <fullName>Lego</fullName>
                </value>
                <value>
                    <fullName>Mattel</fullName>
                </value>
                <value>
                    <fullName>Nintendo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OwnerPerson</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Toys</relationshipLabel>
        <relationshipName>Toys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondHand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SecondHand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doll</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>LEGO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Toy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Toy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>